--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.14.2",
-    "sqlite3": "^5.1.7"
+    "mysql2": "^3.14.2"
   }
 }
