feat: Agregar funcionalidad de limpieza de fin de misión para editores - Nuevo endpoint /api/colaboradores/clean-old-mission/:id - Permisos de editor actualizados para limpiar fin de misión - Documentación completa agregada (GUIA-USUARIO.md, RESUMEN-EJECUTIVO.md) - Tests actualizados para nueva funcionalidad - Script de generación de documentación agregado

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ coverage/
 
 # Scripts de ayuda local
 configurar-github.bat
+limpiar-proyecto.bat
+
+# Documentación generada
+*.pdf
+documentacion-generada/
