--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,123 @@
-# Dependencias
+# Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Archivos de entorno (contienen información sensible)
-config.env
+# Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+config.env
+*.env
 
-# Directorios de build y empaquetado
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Electron build artifacts
 dist/
 build/
 out/
-*.exe
-*.app
-*.dmg
-*.deb
-*.rpm
-*.AppImage
 
-# Archivos de backup (ya movidos)
-backup/
+# Database files
+*.db
+*.sqlite
+*.sqlite3
 
-# Logs
-logs
-*.log
+# Backup files
+backup/backups/
+*.backup
+*.bak
 
-# Archivos temporales del sistema
-.DS_Store
-Thumbs.db
+# Temporary files
 *.tmp
 *.temp
+temp/
+tmp/
 
-# Archivos de IDE
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Archivos de testing
-coverage/
-.nyc_output/
+# PDF files (optional - uncomment if you don't want PDFs in git)
+# docs/*.pdf
 
-# Archivos de cache
+# Log files
+*.log
+
+# Cache directories
 .cache/
 .parcel-cache/
 
-# Archivos de configuración local
-*.local
-
-# Scripts de ayuda local
-configurar-github.bat
-limpiar-proyecto.bat
-
-# Documentación generada
-*.pdf
-documentacion-generada/
+# Local development files
+local/
+dev/
