--- a/package.json
+++ b/package.json
@@ -6,17 +6,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
-    "test:app": "jest app.test.js",
-    "test:server": "jest server.test.js",
     "electron": "electron .",
     "electron-dev": "concurrently \"npm start\" \"wait-on http://localhost:3001 && electron .\"",
-    "build": "electron-builder",
-    "build-win": "electron-builder --win",
-    "build-mac": "electron-builder --mac",
-    "build-linux": "electron-builder --linux",
-    "build-exe": "pkg server.js --targets node18-win-x64 --output SistemaEstimulacion.exe",
-    "build-portable": "pkg server.js --targets node18-win-x64 --output SistemaEstimulacion.exe --public"
+    "convert-pdf": "node convertir-pdf.js",
+    "install-pdf-deps": "npm install puppeteer marked",
+    "generate-docs": "npm run install-pdf-deps && npm run convert-pdf"
   },
   "keywords": [
     "estimulacion",
@@ -29,11 +23,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "electron": "^28.0.0",
-    "electron-builder": "^24.13.3",
-    "jest": "^29.5.0",
     "nodemon": "^3.0.2",
-    "pkg": "^5.8.1",
-    "supertest": "^6.3.3",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
@@ -43,33 +33,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.0"
-  },
-  "build": {
-    "appId": "com.sistemaestimulacion.app",
-    "productName": "Sistema de Estimulación",
-    "directories": {
-      "output": "dist"
-    },
-    "files": [
-      "**/*",
-      "!node_modules/**/*",
-      "!dist/**/*"
-    ],
-    "win": {
-      "target": "portable",
-      "icon": "assets/icon.ico"
-    },
-    "mac": {
-      "target": "dmg",
-      "icon": "assets/icon.icns"
-    },
-    "linux": {
-      "target": "AppImage",
-      "icon": "assets/icon.png"
-    },
-    "portable": {
-      "artifactName": "SistemaEstimulacion.exe"
-    }
+    "marked": "^16.1.1",
+    "mysql2": "^3.6.0",
+    "puppeteer": "^24.15.0"
   }
 }
