commit 26-09-25 para resolucion de orden de listado y eliminación de usuarios

--- a/config.env
+++ b/config.env
@@ -1,3 +1,26 @@
+# Configuración de autenticación y seguridad
+
+# Clave JWT (cámbiala en producción)
+JWT_SECRET=super-secret-dev-key-change-me
+
+# Duración del token de acceso (login). 365 días
+JWT_EXPIRES_IN=365d
+
+# Duración del refresh token (opcional, extiende si usas refresh)
+JWT_REFRESH_EXPIRES_IN=400d
+
+# Días para expirar contraseña (evita el 401 por caducidad)
+PASSWORD_EXPIRY_DAYS=365
+
+# Coste de bcrypt
+BCRYPT_ROUNDS=12
+
+# Rate limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Puerto del backend
+PORT=3001
 # Configuración del Servidor
 PORT=3001
 NODE_ENV=development
